--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529571269
+    eco: null
+    guid: eaf8d12b-4c3e-4243-88ed-4e25ac5afa67
+    state: running
+-   action_name: save
+    args: null
+    created: 1529571269
+    eco: null
+    guid: 9a8399d0-3f88-4a2d-9da7-4f0d76771530
+    state: new
