--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529571869
+    eco: null
+    guid: c2fc6899-8be1-4b23-a371-2e9b974526d9
+    state: running
+-   action_name: save
+    args: null
+    created: 1529571869
+    eco: null
+    guid: daa89c7e-c52a-4ae3-89ca-d8be70f4d010
+    state: new
