--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529573129
+    created: 1529573189
     eco: null
-    guid: 93b542bf-a493-47f2-ae43-0e821bdfc0a4
+    guid: 9f3b073c-c0a4-46b6-b4bf-72f2db6e76ad
     state: running
