--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529573129
+    created: 1529573189
     eco: null
-    guid: c4ecce33-88c1-4b84-95db-92fcbe12d67e
+    guid: 697c3650-8876-40bf-b225-caea1cc3beb5
     state: running
