--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529574449
+    created: 1529574519
     eco: null
-    guid: c68f051e-2263-407d-9ac9-8d25869fec06
+    guid: 595355b6-a7fc-4226-94e9-1fad077d4f6c
     state: running
