--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529574449
+    created: 1529574519
     eco: null
-    guid: 61e8dc48-cff7-4e5d-9366-9069424917b9
+    guid: 60f3d02b-32b4-48d4-abec-5ffff00269ce
     state: running
