--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
-    args: null
-    created: 1529575769
+-   action_name: install
+    args: {}
+    created: 1529575835
     eco: null
-    guid: dbb9e992-9bcf-4163-bde8-b8515fdf9d56
+    guid: 3911f69b-766a-44c2-b501-e747f06000d5
     state: running
