--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529576099
+    eco: null
+    guid: ef690fd7-ce1b-40d3-b6a7-1088df95dae3
+    state: running
+-   action_name: save
+    args: null
+    created: 1529576099
+    eco: null
+    guid: 70265a5b-a95e-4c5c-aee3-ca81d2c7fe07
+    state: new
