--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529576369
+    eco: null
+    guid: 61b4e418-21b8-4a7e-831d-3dfd5832c7ce
+    state: running
+-   action_name: save
+    args: null
+    created: 1529576369
+    eco: null
+    guid: 5984d5bd-2b17-4395-8f72-958b4e8f565b
+    state: new
