--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529576699
+    eco: null
+    guid: 94139078-d15f-4915-bca5-ad58ca735a6a
+    state: running
+-   action_name: save
+    args: null
+    created: 1529576699
+    eco: null
+    guid: 2ac8a645-fcbf-431f-8dcf-cff0c3bd0adf
+    state: new
