--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529577089
+    eco: null
+    guid: b5c7c838-df7e-4d3c-acd0-2e7fc30a4212
+    state: running
+-   action_name: save
+    args: null
+    created: 1529577089
+    eco: null
+    guid: 334e3a3a-98fb-4425-824c-7b7df4820862
+    state: new
