--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529578189
+    created: 1529579783
     eco: null
-    guid: 8d6b805d-6072-42e2-ba6d-aa66da18f201
+    guid: 128ad63f-3480-40c6-8f04-b9de3a95eda0
     state: running
