--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529581533
+    eco: null
+    guid: f5f75c76-ed32-4ad1-8aa4-157c91c168e6
+    state: running
