--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529581663
+    created: 1529581733
     eco: null
-    guid: 01b6a913-ff96-4dae-b679-a0b4e0c5d33e
+    guid: 94158a5a-bb22-48df-aa8a-5528f0f92c93
     state: running
