--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529582593
+    eco: null
+    guid: 4a9b2375-4680-4442-b3ed-06342488fcbc
+    state: running
+-   action_name: save
+    args: null
+    created: 1529582593
+    eco: null
+    guid: b322bdd1-f272-405d-a81c-1f4f2a127925
+    state: new
