--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529583133
+    created: 1529583203
     eco: null
-    guid: 1e6d616d-c7c4-4a32-9096-6f83f7db50ba
+    guid: b9d52256-ae57-4df0-a222-d7f10719efb9
     state: running
