--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529583133
+    created: 1529583203
     eco: null
-    guid: f001f8c9-d050-4f11-a574-2bc80793eb2f
+    guid: cdf9c9c1-e7ed-488b-ad64-9effbd73474d
     state: running
