--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529583603
+    created: 1529583673
     eco: null
-    guid: 6a326f8d-126e-44d8-8f19-ba6bf395422c
+    guid: 08ea45b7-7f41-474a-87f7-1a8531c09c3e
     state: running
