--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529586313
+    created: 1529586383
     eco: null
-    guid: f0abec91-9337-4429-8837-7281baba7a85
+    guid: 7b5bbeee-456c-4549-9e4a-419121bacea0
     state: running
