--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529586313
+    created: 1529586383
     eco: null
-    guid: 448b8649-6a8b-4c60-a7fa-a57db48cf930
+    guid: 16d08e3f-32f0-4a82-8308-eb3ab9d768b5
     state: running
