--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529586973
+    eco: null
+    guid: 95e79ae8-fb76-43bd-9c85-ce4c0bb9f3aa
+    state: running
+-   action_name: save
+    args: null
+    created: 1529586973
+    eco: null
+    guid: 18c89a76-2fee-448b-8015-7b57db763955
+    state: new
