--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529587303
+    eco: null
+    guid: 09cf5195-11ee-48cd-bfae-0cf1833873b5
+    state: running
+-   action_name: save
+    args: null
+    created: 1529587303
+    eco: null
+    guid: 5b7db9b5-82ed-4ec7-975c-57b154a0c8b5
+    state: new
