--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529588413
+    eco: null
+    guid: 99d79a8d-bd35-49fd-8349-0890dfbfa966
+    state: running
+-   action_name: save
+    args: null
+    created: 1529588413
+    eco: null
+    guid: bc5488f0-e93e-4ff0-821f-b013139796b8
+    state: new
