--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529589040
+    eco: null
+    guid: 4be32c1b-c8ab-4ef6-b8a0-8d69b729fc7b
+    state: running
+-   action_name: save
+    args: null
+    created: 1529589040
+    eco: null
+    guid: 75fd5954-6b42-4177-964b-cc2dd19cc67a
+    state: new
