--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529589760
+    eco: null
+    guid: 0f5d82c8-ead6-4df6-a7f5-d6746aba67f6
+    state: running
+-   action_name: save
+    args: null
+    created: 1529589760
+    eco: null
+    guid: d013d774-8fa2-4ba6-90d0-4f5fa11548a8
+    state: new
