--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529589760
+    created: 1529589830
     eco: null
-    guid: fc4283a3-05df-457b-a081-94b1d19c36cb
+    guid: 49ea00d1-8fd1-4126-b1fe-d759931bcaca
     state: running
