--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529589760
+    created: 1529589830
     eco: null
-    guid: c49910dc-7935-436c-b887-54594db5664a
+    guid: 3f897cc1-a4b1-41a9-a178-9361c49e5d17
     state: running
