--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529590420
+    eco: null
+    guid: c716d59a-c5bb-4c42-b825-64c17e97a2b4
+    state: running
+-   action_name: save
+    args: null
+    created: 1529590420
+    eco: null
+    guid: 22337d1c-cc6d-4387-8e8c-53015f4e93f5
+    state: new
